<resources>
    <string name="app_name">Brastlewark</string>

    <string name="string_content_description">Non accessible view</string>

    <string name="retry_button_text">Retry</string>

    //Exception messages
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_hero_not_found">Cannot retrieve hero data. Check your internet connection</string>

    // List
    <string name="hero_detail_name_chip_hint">Name:\u0020</string>
    <string name="hero_detail_age_chip_hint">Age:\u0020</string>
    <string name="hero_detail_weight_chip_hint">Weight:\u0020</string>
    <string name="hero_detail_height_chip_hint">Height:\u0020</string>
    <string name="hero_detail_from_chip_hint">from\u0020</string>
    <string name="hero_detail_to_chip_hint">to\u0020</string>

    // Detail
    <string name="hero_detail_friends_title">Friends</string>
    <string name="hero_detail_professions_title">Professions</string>
    <string name="hero_detail_hair_color_title">Hair color</string>
    <string name="hero_detail_height_title">Height</string>
    <string name="hero_detail_weight_title">Weight</string>
    <string name="hero_detail_age_title">Age</string>

    // Filter
    <string name="hero_list_filter_apply_button">Apply filter</string>
    <string name="hero_list_filter_remove_button">Remove filters</string>
    <string name="filter_list_menu_title">Search</string>
    <string name="filter_activity_title">Apply filters</string>
    <string name="age_range_question">What age range are you looking for?</string>
    <string name="weight">What weight range are you looking for?</string>
    <string name="height">What height range are you looking for?</string>
    <string name="hero_list_filter_name_query_hint">Name</string>
    <string name="range_text_separator" translatable="false">\u0020-\u0020</string>
    <string name="age_range_default_text">All ages</string>
    <plurals name="age_range_text">
        <item quantity="one">%1$s year</item>
        <item quantity="other">%1$s years</item>
    </plurals>
    <string name="weight_range_default_text">All weights</string>
    <string name="weight_range_text">%1$s kg</string>
    <string name="height_range_default_text">All heights</string>
    <string name="height_range_text">%1$s cm</string>
    <string name="no_results_found_error_message">No results found…</string>

</resources>
