<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingBottom="50dp"
            android:orientation="vertical">

            <View
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px"/>

            <com.vginert.brastlewark.android.view.custom.ClearEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hero_list_filter_name_query_hint"
                style="@style/AppTheme.SearchEditText"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginBottom="@dimen/divider_bottom_margin"
                android:background="@drawable/divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_range_question"/>

            <TextView
                android:id="@+id/tv_age_range_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.FilterTextValue"
                android:text="@string/age_range_default_text"/>

            <com.vginert.rangebar.RangeBar
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rb_age"
                android:layout_width="match_parent"
                android:layout_height="@dimen/range_bar_height"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                custom:theme="@style/AppTheme.RangeBar"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginBottom="@dimen/divider_bottom_margin"
                android:background="@drawable/divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"/>

            <TextView
                android:id="@+id/tv_weight_range_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.FilterTextValue"
                android:text="@string/weight_range_default_text"/>

            <com.vginert.rangebar.RangeBar
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rb_weight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/range_bar_height"
                custom:theme="@style/AppTheme.RangeBar"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginBottom="@dimen/divider_bottom_margin"
                android:background="@drawable/divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height"/>

            <TextView
                android:id="@+id/tv_height_range_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.FilterTextValue"
                android:text="@string/height_range_default_text"/>

            <com.vginert.rangebar.RangeBar
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rb_height"
                android:layout_width="match_parent"
                android:layout_height="@dimen/range_bar_height"
                custom:theme="@style/AppTheme.RangeBar"/>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/view_progress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_remove_filters"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorPrimary"
            android:text="@string/hero_list_filter_remove_button"/>

        <Button
            android:id="@+id/btn_apply_filters"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:background="?attr/selectableItemBackground"
            android:text="@string/hero_list_filter_apply_button"/>

    </LinearLayout>

</RelativeLayout>