<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="56dp"
                android:paddingTop="174dp">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:freezesText="true"/>

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardElevation="8dp"
                app:contentPaddingBottom="16dp"
                app:contentPaddingTop="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/ll_hero_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="72dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="16dp"
                                android:src="@drawable/ic_age"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="72dp"
                                android:gravity="center_vertical"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:freezesText="true"
                                    android:text="@string/hero_detail_age_title"
                                    android:textSize="16sp"/>

                                <TextView
                                    android:id="@+id/tv_age"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    android:freezesText="true"/>

                            </LinearLayout>


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="72dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="16dp"
                                android:src="@drawable/ic_weight"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="72dp"
                                android:gravity="center_vertical"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:freezesText="true"
                                    android:text="@string/hero_detail_weight_title"
                                    android:textSize="16sp"/>

                                <TextView
                                    android:id="@+id/tv_weight"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    android:freezesText="true"/>

                            </LinearLayout>


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="72dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="16dp"
                                android:src="@drawable/ic_tall"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="72dp"
                                android:gravity="center_vertical"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:freezesText="true"
                                    android:text="@string/hero_detail_height_title"
                                    android:textSize="16sp"/>

                                <TextView
                                    android:id="@+id/tv_height"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    android:freezesText="true"/>

                            </LinearLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="72dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="16dp"
                                android:src="@drawable/ic_hair_color"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="72dp"
                                android:gravity="center_vertical"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:freezesText="true"
                                    android:text="@string/hero_detail_hair_color_title"
                                    android:textSize="16sp"/>

                                <TextView
                                    android:id="@+id/tv_hair_color"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    android:freezesText="true"/>

                            </LinearLayout>


                        </RelativeLayout>

                    </LinearLayout>

                    <include layout="@layout/view_progress"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/ll_profession_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:visibility="gone">
                <TextView
                    android:id="@+id/tv_professions_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/hero_detail_professions_title"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_professions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_friends_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:visibility="gone">
                <TextView
                    android:id="@+id/tv_friends_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/hero_detail_friends_title"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_friends"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/hero_detail_avatar_width"
        android:layout_height="@dimen/hero_detail_avatar_width"
        android:layout_gravity="center|top"
        android:layout_marginTop="50dp"
        android:elevation="8dp"
        android:src="@drawable/ic_profile"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp"
        app:dependTargetY="-176dp"
        app:dependType="y"
        app:dependsOn="@+id/app_bar"
        app:layout_behavior="com.vginert.brastlewark.android.view.custom.CoordinatorLayoutViewBehavior"
        app:targetHeight="@dimen/hero_detail_avatar_target_width"
        app:targetWidth="@dimen/hero_detail_avatar_target_width"
        app:targetX="56dp"
        app:targetY="@dimen/hero_detail_target_avatar_y"/>

    <TextView
        android:id="@+id/tv_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="112dp"
        android:layout_marginTop="-100dp"
        android:alpha="0"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:textSize="@dimen/hero_detail_bar_title_text_size"
        android:textStyle="bold"
        app:dependTargetY="-206dp"
        app:dependType="y"
        app:dependsOn="@+id/app_bar"
        app:layout_behavior="com.vginert.brastlewark.android.view.custom.CoordinatorLayoutViewBehavior"
        app:targetAlpha="1"
        app:targetY="@dimen/hero_detail_target_title_y"/>

</android.support.design.widget.CoordinatorLayout>